05-applications/hello-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: default
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80            # Porta do serviço
      targetPort: 5678    # Porta do container
  type: ClusterIP
